# GameServers

./: CMakeLists.txt  README.md  main.cpp  setup.sh  todo.md
.github/: copilot-instructions.md
docs/: WRITE_EVENT_IMPLEMENTATION.md
docx/: EventLoop模块设计.md  Login模块设计.md  会话过期写事件示例.md  写事件便捷API.md  写事件处理示例.md
examples/: write_event_example.cpp
src/Connect/: EPollPoller.cpp  EventLoop.cpp  设计.md
src/Connect/include/: Client.h  EPollPoller.h  EventLoop.h
src/DataServer/: DBConnPool.cpp  DBConnPool.h
src/Game/: GameRecvProc.cpp
src/Game/include/: GameRecvProc.h
src/Login/: LoginProc.cpp  RecvProc.cpp  SignUpProc.cpp  UserSessionCB.cpp
src/Login/axis/: QueryUserData.cpp  QueryUserData.h  SafetyPwd.cpp  SafetyPwd.h
src/Login/include/: LoginProc.cpp  LoginProc.h  RecvProc.h  SignUpProc.h  UserSessionCB.h
src/common/: ParseHttp.cpp  ParseHttp.h  RspToFe.h  http_response.cpp  http_response.h
testcode/: CMakeLists.txt  HttpRequestTest.cpp
